--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/router": "^17.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "bootstrap": "5.3.3",
+    "bootstrap-icons": "1.11.0",
+    "@ngx-translate/core": "14.0.0",
+    "@ngx-translate/http-loader": "7.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.8",
