--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "bootstrap": "5.3.3",
     "bootstrap-icons": "1.11.0",
     "@ngx-translate/core": "14.0.0",
-    "@ngx-translate/http-loader": "7.0.0"
+    "@ngx-translate/http-loader": "7.0.0",
+    "chart.js": "^4.4.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.8",
@@ -37,6 +38,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "prettier": "3.1"
   }
 }
