--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "rx-js-vs-ng-rx-js",
+  "name": "signalsVsRxJsVsNgRx",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production --base-href https://juanmamunoz.github.io/signalsVsRxJsVsNgRx/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
