--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build --configuration production --base-href https://juanmamunoz.github.io/signalsVsRxJsVsNgRx/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "test:ci": "ng test --no-watch --code-coverage --browsers=ChromeHeadless"
+    "test:ci": "ng test --code-coverage --browsers=ChromeHeadless"
   },
   "private": true,
   "dependencies": {
