--- a/docs/package.json
+++ b/docs/package.json
@@ -5,9 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --configuration production --base-href https://juanmamunoz.github.io/signalsVsRxJsVsNgRx/",
+    "prebuild": "npm run test",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "test:ci": "ng test --code-coverage --browsers=ChromeHeadless"
+    "test": "ng test --code-coverage --browsers=ChromeHeadless --watch=false",
+    "test:dev": "ng test --code-coverage --browsers=ChromeHeadless"
   },
   "private": true,
   "dependencies": {
